<resources>
    <string name="app_name">RateUWTProfessors</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">uwnetid@uw.edu</string>
    <string name="goback">Go Back</string>
    <string name="prompt_password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="display_name">Display name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid. @uw.edu emails only!</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="start">Start</string>

    <string name="welcome_to">     Welcome to Rate UWT Professors !</string>
    <string name="rate_professors">Rate UWT Professors !</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.rateuwtprofessors.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
